@@ -20,7 +20,7 @@ Doc: modular form corresponding to the eta quotient matrix \kbd{eta}.
  ? mfcoefs(mffrometaquo([1,1;23,1]),10)
  %3 = [0, 1, -1, -1, 0, 0, 1, 0, 1, 0, 0]
  ? F = mffrometaquo([1,2;2,-1]); mfparams(F)
- %4 = [16,1/2,1,y]
+ %4 = [16, 1/2, 1, y, t - 1]
  ? mfcoefs(F,10)
  %5 = [1, -2, 0, 0, 2, 0, 0, 0, 0, -2, 0]
  ? mffrometaquo(Mat([1,-24]))
