@@ -43,8 +43,8 @@ Doc: \kbd{NK} being of the form \kbd{[N,k]} with $k$ possibly half-integral,
  \bprog
  ? F = mfsearch([[1..40], 2], [0,1,2,3,4], 1); #F
  %1 = 3
- ? [ mfparams(f) | f <- F ]
- %2 = [[38, 2, 1, y], [40, 2, 8, y], [40, 2, 40, y]]
+ ? [ mfparams(f)[1..3] | f <- F ]
+ %2 = [[38, 2, 1], [40, 2, 8], [40, 2, 40]]
  ? mfcoefs(F[1],10)
  %3 = [0, 1, 2, 3, 4, -5, -8, 1, -7, -5, 7]
  @eprog
