@@ -168,7 +168,7 @@ y^2 + 3*y + 4, y^4 - y^3 - 8*y^2 + 4*y + 12]]
 10
 88
 [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-"TR([96, 6, 1, y])"
+"TR([96, 6, 1, y, t - 1])"
 "CONST([])"
 [-2, -4]
 [0, 72, -2, -4, -12, -16, -90, -8, 424, -8, -300, -8, -396, -16, 944, -976]
@@ -193,7 +193,7 @@ od(0, t^4 + t^3 + t^2 + t + 1), Mod(0, t^4 + t^3 + t^2 + t + 1)]
 [0, 2, -2, 0, -12, 0, 28, -16, 40, -2, -56, 0, -56, 0, 16, 112]
 [0, 1, -1, -1, -1, 1, 1, 0, 3, 1, -1, -4, 1, -2, 0, -1]
 [0, 2, 4, 0, -6, 0, -6, -4, -36, 18, -10, 28, -24, 96, 36, 30]
-[15, 4, 1, y]
+[15, 4, 1, y, t - 1]
 8
 [4, 1, [0, 4, 0, -48, 0, 216, 0, -352, 0, -396]]
 [4, 2, [0, 0, 7, 0, 0, 0, -84, 0, 0, 0]]
@@ -727,10 +727,10 @@ Mod(37, 96), 4, 0], [8, Mod(59, 96), 4, 0]]
 0.13774935502057657907313538946599934253*I]
 [0, 2, 0, 0, Mod(-2*t - 2, t^2 + t + 1), 0, 0, 0, 0, Mod(2*t, t^2 + t + 1), 
 0, 0, 0, 0, 0, 0]
-[196, 1/2, Mod(2, 7), y]
+[196, 1/2, Mod(2, 7), y, t^2 + t + 1]
 [0, 2, 0, 0, Mod(4*t, t^2 + 1), 0, 0, 0, 0, Mod(-6*t, t^2 + 1), 0, 0, 0, 0, 
 0, 0]
-[100, 3/2, Mod(7, 20), y]
+[100, 3/2, Mod(7, 20), y, t^2 + 1]
 [1, -264, -135432, -5196576, -69341448, -515625264, -2665843488, -1065335251
 2, -35502821640, -102284205672, -264515760432, -622498190688, -1364917062432
 , -2799587834736, -5465169838656, -10149567696576]
@@ -1052,14 +1052,14 @@ od(-675*t, t^2 + t + 1)*x^4 + Mod(54, t^2 + t + 1)*x^3 + Mod(-972*t - 972, t
 [14]
 [14]
 [-12]
-[[33, 2, 1, y], [0, 1, 1, -1, -1, -2, -1, 4, -3, 1, -2]]
-[[38, 2, 1, y], [0, 1, 1, -1, 1, -4, -1, 3, 1, -2, -4]]
-[[39, 2, 1, y], [0, 1, 1, -1, -1, 2, -1, -4, -3, 1, 2]]
-[[34, 2, 1, y], [0, 1, 1, -2, 1, 0, -2, -4, 1, 1, 0]]
-[[38, 2, 1, y], [0, 1, -1, 1, 1, 0, -1, -1, -1, -2, 0]]
-[[11, 3, -11, y], [0, 1, 0, -5, 4, -1, 0, 0, 0, 16, 0]]
-[[12, 3, -3, y], [0, 1, 0, -3, 0, 0, 0, 2, 0, 9, 0]]
-[[16, 3, -4, y], [0, 1, 0, 0, 0, -6, 0, 0, 0, 9, 0]]
+[[33, 2, 1, y, t - 1], [0, 1, 1, -1, -1, -2, -1, 4, -3, 1, -2]]
+[[38, 2, 1, y, t - 1], [0, 1, 1, -1, 1, -4, -1, 3, 1, -2, -4]]
+[[39, 2, 1, y, t - 1], [0, 1, 1, -1, -1, 2, -1, -4, -3, 1, 2]]
+[[34, 2, 1, y, t - 1], [0, 1, 1, -2, 1, 0, -2, -4, 1, 1, 0]]
+[[38, 2, 1, y, t - 1], [0, 1, -1, 1, 1, 0, -1, -1, -1, -2, 0]]
+[[11, 3, -11, y, t - 1], [0, 1, 0, -5, 4, -1, 0, 0, 0, 16, 0]]
+[[12, 3, -3, y, t - 1], [0, 1, 0, -3, 0, 0, 0, 2, 0, 9, 0]]
+[[16, 3, -4, y, t - 1], [0, 1, 0, 0, 0, -6, 0, 0, 0, 9, 0]]
 [[38, 2, 1], [0, 1, 2, 3, 4, -5, -8, 1, -7, -5, 7]]
 [[40, 2, 8], [0, 1, 2, 3, 4, -4, -6, -1, -10, -1, 2]]
 [[40, 2, 40], [0, 1, 2, 3, 4, -8, -6, -7, 6, -1, -2]]
@@ -1199,56 +1199,62 @@ od(-5609*t - 2054, t^2 + t + 1)*x + Mod(-1501*t - 5293, t^2 + t + 1), Mod(17
 [1/12, 1/6, 1/2, 2/3, 1/2, 2]
 [1/12, 1/6, 1/4, 2/3, 1/2, 1]
 1
-[3, 7, -3, y, 3, "F_7(-3)"]
-[15, 7, -15, y, 3, "F_7(-3, 5)"]
-[1, 4, 1, y, 3, "E_4"]
-[11, 1, -11, y, 3, "LIN([F_1(1, -11)], [2]~)", "F_1(1, -11)"]
-[4, 1/2, 1, y, 3, "THETA(1)"]
-[4, 1/2, 1, y, 1, "T_4(9)(THETA(1))", "THETA(1)"]
-[1, 12, 1, y, 0, "DELTA"]
-[11, 2, 1, y, 0, "ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])], 1)"]
-[35, 2, 1, y, 0, "ELL([0, 1, 1, 9, 1])"]
-[385, 2, 1, y, -1, "LIN([ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])], 1), E
-LL([0, 1, 1, 9, 1])], [1, 1])", "ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])
-], 1)", "ELL([0, 1, 1, 9, 1])"]
-[3, 21, -3, y, -1, "POW(F_7(-3), 3)", "F_7(-3)"]
-[15, 14, 5, y, -1, "MUL(F_7(-3), F_7(-3, 5))", "F_7(-3)", "F_7(-3, 5)"]
-[1, 12, 1, y, 0, "MULRC_2(E_4, E_4)", "E_4", "E_4"]
-[385, 2, 1, y, -1, "LIN([ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])], 1), E
-LL([0, 1, 1, 9, 1])], [1, -1])", "ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2]
-)], 1)", "ELL([0, 1, 1, 9, 1])"]
-[15, 0, 5, y, -1, "DIV(F_7(-3, 5), F_7(-3))", "F_7(-3, 5)", "F_7(-3)"]
-[1, 12, 1, y, -1, "SHIFT(DELTA, 1)", "DELTA"]
-[1, 6, 1, y, -1, "DER^1(E_4)", "E_4"]
-[1, 12, 1, y, 0, "DERE2^4(E_4)", "E_4"]
-[25, 4, 1, y, -1, "TWIST(E_4, 5)", "E_4"]
-[1, 12, 1, y, 0, "T_1(5)(DELTA)", "DELTA"]
-[3, 4, 1, y, 3, "B(3)(E_4)", "E_4"]
-[2, 2, 1, y, 3, "LIN([F_2(1), B(2)(F_2(1))], [1, -2])", "F_2(1)", "B(2)(F_2(
-1))"]
-[3, 2, 1, y, 3, "LIN([F_2(1), B(3)(F_2(1))], [1, -3])", "F_2(1)", "B(3)(F_2(
-1))"]
-[6, 2, 1, y, 3, "LIN([F_2(1), B(6)(F_2(1))], [1, -6])", "F_2(1)", "B(6)(F_2(
-1))"]
-[1, 4, 1, y, 3, "F_4(1, 1)"]
-[2, 4, 1, y, 3, "B(2)(F_4(1, 1))", "F_4(1, 1)"]
-[3, 4, 1, y, 3, "B(3)(F_4(1, 1))", "F_4(1, 1)"]
-[4, 4, 1, y, 3, "B(4)(F_4(1, 1))", "F_4(1, 1)"]
-[6, 4, 1, y, 3, "B(6)(F_4(1, 1))", "F_4(1, 1)"]
-[8, 4, 1, y, 3, "B(8)(F_4(1, 1))", "F_4(1, 1)"]
-[12, 4, 1, y, 3, "B(12)(F_4(1, 1))", "F_4(1, 1)"]
-[24, 4, 1, y, 3, "B(24)(F_4(1, 1))", "F_4(1, 1)"]
-[6, 4, 1, y, 2, "TR^new([6, 4, 1, y])"]
-[12, 4, 1, y, 2, "B(2)(TR^new([6, 4, 1, y]))", "TR^new([6, 4, 1, y])"]
-[24, 4, 1, y, 1, "B(4)(TR^new([6, 4, 1, y]))", "TR^new([6, 4, 1, y])"]
-[8, 4, 1, y, 2, "TR^new([8, 4, 1, y])"]
-[24, 4, 1, y, 1, "B(3)(TR^new([8, 4, 1, y]))", "TR^new([8, 4, 1, y])"]
-[12, 4, 1, y, 2, "TR^new([12, 4, 1, y])"]
-[24, 4, 1, y, 1, "B(2)(TR^new([12, 4, 1, y]))", "TR^new([12, 4, 1, y])"]
-[24, 4, 1, y, 0, "TR^new([24, 4, 1, y])"]
+[3, 7, -3, y, t - 1, 3, "F_7(-3)"]
+[15, 7, -15, y, t - 1, 3, "F_7(-3, 5)"]
+[1, 4, 1, y, t - 1, 3, "E_4"]
+[11, 1, -11, y, t - 1, 3, "LIN([F_1(1, -11)], [2]~)", "F_1(1, -11)"]
+[4, 1/2, 1, y, t - 1, 3, "THETA(1)"]
+[4, 1/2, 1, y, t - 1, 1, "T_4(9)(THETA(1))", "THETA(1)"]
+[1, 12, 1, y, t - 1, 0, "DELTA"]
+[11, 2, 1, y, t - 1, 0, "ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])], 1)"]
+[35, 2, 1, y, t - 1, 0, "ELL([0, 1, 1, 9, 1])"]
+[385, 2, 1, y, t - 1, -1, "LIN([ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])]
+, 1), ELL([0, 1, 1, 9, 1])], [1, 1])", "ETAQUO([Vecsmall([1, 11]), Vecsmall(
+[2, 2])], 1)", "ELL([0, 1, 1, 9, 1])"]
+[3, 21, -3, y, t - 1, -1, "POW(F_7(-3), 3)", "F_7(-3)"]
+[15, 14, 5, y, t - 1, -1, "MUL(F_7(-3), F_7(-3, 5))", "F_7(-3)", "F_7(-3, 5)
+"]
+[1, 12, 1, y, t - 1, 0, "MULRC_2(E_4, E_4)", "E_4", "E_4"]
+[385, 2, 1, y, t - 1, -1, "LIN([ETAQUO([Vecsmall([1, 11]), Vecsmall([2, 2])]
+, 1), ELL([0, 1, 1, 9, 1])], [1, -1])", "ETAQUO([Vecsmall([1, 11]), Vecsmall
+([2, 2])], 1)", "ELL([0, 1, 1, 9, 1])"]
+[15, 0, 5, y, t - 1, -1, "DIV(F_7(-3, 5), F_7(-3))", "F_7(-3, 5)", "F_7(-3)"
+]
+[1, 12, 1, y, t - 1, -1, "SHIFT(DELTA, 1)", "DELTA"]
+[1, 6, 1, y, t - 1, -1, "DER^1(E_4)", "E_4"]
+[1, 12, 1, y, t - 1, 0, "DERE2^4(E_4)", "E_4"]
+[25, 4, 1, y, t - 1, -1, "TWIST(E_4, 5)", "E_4"]
+[1, 12, 1, y, t - 1, 0, "T_1(5)(DELTA)", "DELTA"]
+[3, 4, 1, y, t - 1, 3, "B(3)(E_4)", "E_4"]
+[2, 2, 1, y, t - 1, 3, "LIN([F_2(1), B(2)(F_2(1))], [1, -2])", "F_2(1)", "B(
+2)(F_2(1))"]
+[3, 2, 1, y, t - 1, 3, "LIN([F_2(1), B(3)(F_2(1))], [1, -3])", "F_2(1)", "B(
+3)(F_2(1))"]
+[6, 2, 1, y, t - 1, 3, "LIN([F_2(1), B(6)(F_2(1))], [1, -6])", "F_2(1)", "B(
+6)(F_2(1))"]
+[1, 4, 1, y, t - 1, 3, "F_4(1, 1)"]
+[2, 4, 1, y, t - 1, 3, "B(2)(F_4(1, 1))", "F_4(1, 1)"]
+[3, 4, 1, y, t - 1, 3, "B(3)(F_4(1, 1))", "F_4(1, 1)"]
+[4, 4, 1, y, t - 1, 3, "B(4)(F_4(1, 1))", "F_4(1, 1)"]
+[6, 4, 1, y, t - 1, 3, "B(6)(F_4(1, 1))", "F_4(1, 1)"]
+[8, 4, 1, y, t - 1, 3, "B(8)(F_4(1, 1))", "F_4(1, 1)"]
+[12, 4, 1, y, t - 1, 3, "B(12)(F_4(1, 1))", "F_4(1, 1)"]
+[24, 4, 1, y, t - 1, 3, "B(24)(F_4(1, 1))", "F_4(1, 1)"]
+[6, 4, 1, y, t - 1, 2, "TR^new([6, 4, 1, y, t - 1])"]
+[12, 4, 1, y, t - 1, 2, "B(2)(TR^new([6, 4, 1, y, t - 1]))", "TR^new([6, 4, 
+1, y, t - 1])"]
+[24, 4, 1, y, t - 1, 1, "B(4)(TR^new([6, 4, 1, y, t - 1]))", "TR^new([6, 4, 
+1, y, t - 1])"]
+[8, 4, 1, y, t - 1, 2, "TR^new([8, 4, 1, y, t - 1])"]
+[24, 4, 1, y, t - 1, 1, "B(3)(TR^new([8, 4, 1, y, t - 1]))", "TR^new([8, 4, 
+1, y, t - 1])"]
+[12, 4, 1, y, t - 1, 2, "TR^new([12, 4, 1, y, t - 1])"]
+[24, 4, 1, y, t - 1, 1, "B(2)(TR^new([12, 4, 1, y, t - 1]))", "TR^new([12, 4
+, 1, y, t - 1])"]
+[24, 4, 1, y, t - 1, 0, "TR^new([24, 4, 1, y, t - 1])"]
 [1, 2, 3, 4, 6, 8, 12, 24, 6, 12, 24, 8, 24, 12, 24, 24]
-[23, 1, -23, y, 1, "LIN([DIH(-23, [1, 0; 0, 1], [3], [1])], [1]~)", "DIH(-23
-, [1, 0; 0, 1], [3], [1])"]
+[23, 1, -23, y, t - 1, 1, "LIN([DIH(-23, [1, 0; 0, 1], [3], [1])], [1]~)", "
+DIH(-23, [1, 0; 0, 1], [3], [1])"]
 0.035149946790370230814006345508484787440
 23
 []~
@@ -1343,19 +1349,19 @@ t + 1, 4*t + 4]
 t, -6*t - 4, t + 2]
 [0, 0, 0, 0, 1, t - 1, -t - 2, -2*t + 1, 0, t + 1, 4*t + 2, 1, -t + 1, -t - 
 2, -t - 3, t]
-[4, 1, -4, y]
+[4, 1, -4, y, t - 1]
 [1, 0, 0, 2, 0, 0, 0, 6, 6, 0, 0, 0, 8, 0, 0, 6]
 [0, 1, 0, -1, 1, 2, 4, -3, -3, 5, 2, 4, -4, 0, 8, -3]
 [0, 0, 1, 1, 0, 1, 0, 1, 2, 0, 1, 0, 2, 2, 0, 1]
 2
-[1, 12, 1, y]
-[4, 6, 1, y]
-[9, 4, 1, y]
-[16, 3, -4, y]
-[36, 2, 1, y]
-[144, 1, -4, y]
-[576, 1/2, 12, y]
-[64, 3/2, 1, y]
+[1, 12, 1, y, t - 1]
+[4, 6, 1, y, t - 1]
+[9, 4, 1, y, t - 1]
+[16, 3, -4, y, t - 1]
+[36, 2, 1, y, t - 1]
+[144, 1, -4, y, t - 1]
+[576, 1/2, 12, y, t - 1]
+[64, 3/2, 1, y, t - 1]
 [0, 1, 0, 0, 0, 0, 0, 0, -3, 0]~
 [[0, 64, [1, 0; 0, 1]], [0, -0.031250000000000000000000000000000000000 - 0.0
 31250000000000000000000000000000000000*I, 0, 0, 0, 0, 0, 0, 0, 0.09375000000
@@ -1365,15 +1371,15 @@ t, -6*t - 4, t + 2]
 446279127450278092853851743566609297*I, 0, 0, 0, 0, 0, 0, 0, -0.208338837382
 35083427856155523069982789 + 0.31180110461345446390454564160671465878*I, 0]]
 0.0018674427317079888144293843310939736875
-[36, 5/2, 1, y]
+[36, 5/2, 1, y, t - 1]
 2
 
 [-1 0 0 2 0 0]
 
 [ 0 0 0 0 1 0]
 
-[9, 4, 1, y]
-[9, 4, 1, y]
+[9, 4, 1, y, t - 1]
+[9, 4, 1, y, t - 1]
 
 [0 -1 0 0 2 0 0 0  0 0 0 0 0 -6 0 0 8 0 0 0 0]
 
@@ -1397,8 +1403,8 @@ t, -6*t - 4, t + 2]
 4
 0.0018371115455019092538663990739211073913
 3.7500000000000000000000000000000000004
-[4, 1/2, 1, y]
-[16, 1/2, 1, y]
+[4, 1/2, 1, y, t - 1]
+[16, 1/2, 1, y, t - 1]
 [1, -2]~
 "F_4(-3, -4)"
 "F_3(5, -7)"
@@ -1557,4 +1563,4 @@ t, -6*t - 4, t + 2]
   ***   at top-level: mfgaloistype([4,1,-4],x)
   ***                 ^------------------------
   *** mfgaloistype: incorrect type in mfgaloistype (t_POL).
-Total time spent: 8180
+Total time spent: 6316
