@@ -84,6 +84,8 @@ BA  18- qfbsolve now returns a vector of solutions.
     19- limitnum / asympnum: remove useless optional parameter 'muli/k'
         [now implicitly set to 1, not to 20]: just extrapolate u(muli*n).
     20- improve rdivii / rdiviiz [ use divri which may use divri_with_gmp ]
+    21- mfparams now returns [N,k,CHI,space or P, Phi] where Phi is the
+        cyclotomic polynomials defining the field of values of CHI
 
   Added
      1- [libpari] nonsquare_Fl
